Screen overflow fix

--- a/src/scss/Site/theme/main.sass
+++ b/src/scss/Site/theme/main.sass
@@ -80,15 +80,16 @@ footer
   transform: scale(.9)
 
 .blured
-  -webkit-filter: blur(5px) !important
-  filter: blur(5px) !important
+  @media (min-width: $screen-sm)
+    -webkit-filter: blur(5px) !important
+    filter: blur(5px) !important
 
 .left-roll
-  @media (min-width: $screen-sm)
+  @media (min-width: $screen-lg)
     left: -2500px
 
 .right-roll
-  @media (min-width: $screen-sm)
+  @media (min-width: $screen-lg)
     left: 2500px
 
 .navbar 
@@ -165,7 +166,7 @@ input:-moz-placeholder
   font-weight: 900
   letter-spacing: 1px
 
-.brand
+header .brand
   cursor: default
   img
     max-width: 100%
@@ -341,6 +342,7 @@ input:-moz-placeholder
 .third-section 
   background-color: #f4f4f4
   padding-top: 30px
+  overflow: hidden
   .right-roll
     @include transition(all .8s)
     position: relative
@@ -422,7 +424,9 @@ input:-moz-placeholder
 .aqua-box 
   background: #2BAFCA
   text-align: center
-  @include transition(all 3s)
+  -webkit-filter: blur(0px)
+  filter: blur(0px)
+  @include transition(all 2s)
   h2 
     padding: 50px 0
     margin: 0
@@ -462,10 +466,6 @@ input:-moz-placeholder
   input[type="submit"]
     display: block
     margin: 25px auto !important
-  @media (min-width: $screen-sm)
-    -webkit-filter: blur(0px)
-    filter: blur(0px)
-
   
 
 
